Starting to look like a webpage

--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -1,3 +1,13 @@
 .about {
   background: green;
+  height: 100vh;
+  width: 100vw;
+}
+
+.about p {
+  color: purple;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
 }
