--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -1,3 +1,13 @@
 .contact {
-    background: Red;
-  }
+  background: Red;
+  height: 100vh;
+  width: 100vw;
+}
+
+.contact p {
+  color: purple;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+}
