--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -1,3 +1,22 @@
 .nav-bar {
-    background: Orange;
-  }
+  background: Orange;
+}
+
+.nav-bar ul {
+  width: 100%;
+  padding: 0;
+  background: #ccc;
+  display: flex;
+}
+.nav-bar ul li {
+  display: inline;
+  box-sizing: border-box;
+  min-width: 100px;
+  max-width: 133px;
+  padding: 5px 10px;
+  background: pink;
+}
+.nav-bar ul li:last-child {
+  margin-left: auto;
+  background: seashell;
+}
