--- a/src/Components/ProjectBox.css
+++ b/src/Components/ProjectBox.css
@@ -1,13 +1,14 @@
 .project-box {
-  background: yellow;
+  background: snow;
   height: 100vh;
   width: 100vw;
 }
 
 .project-box p {
-  color: purple;
+  color: black;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 50vh;
+  font-size: 1.5vw;
 }
