--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -1,13 +1,14 @@
 .contact {
-  background: Red;
+  background: grey;
   height: 100vh;
   width: 100vw;
 }
 
 .contact p {
-  color: purple;
+  color: black;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 50vh;
+  font-size: 1.5vw;
 }
