--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -1,10 +1,11 @@
 .nav-bar {
   background: Orange;
+  margin: 5vh;
 }
 
 .nav-bar ul {
   width: 100%;
-  padding: 0;
+  padding: 1vh;
   background: #ccc;
   display: flex;
 }
