--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -1,6 +1,9 @@
 .nav-bar {
   background: Orange;
-  margin: 5vh;
+  margin: 1vh;
+  position: -webkit-sticky;
+	position: sticky;
+	top: 0;
 }
 
 .nav-bar ul {
@@ -20,4 +23,8 @@
 .nav-bar ul li:last-child {
   margin-left: auto;
   background: seashell;
+}
+
+.nav-bar a {
+  text-decoration: none;
 }
