Changing CSS and starting project carousel

--- a/src/components/desktop/About.css
+++ b/src/components/desktop/About.css
@@ -1,4 +1,10 @@
-.about {
+.night-about {
+  background: darkslategrey;
+  height: 100vh;
+  width: 100vw;
+}
+
+.day-about {
   background: grey;
   height: 100vh;
   width: 100vw;
