--- a/src/components/desktop/Contact.css
+++ b/src/components/desktop/Contact.css
@@ -1,11 +1,24 @@
-.contact {
+.night-contact {
+  background: darkslategrey;
+  height: 100vh;
+  width: 100vw;
+}
+
+.night-contact p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  font-size: 1.5vw;
+}
+
+.day-contact {
   background: grey;
   height: 100vh;
   width: 100vw;
 }
 
-.contact p {
-  color: black;
+.day-contact p {
   display: flex;
   justify-content: center;
   align-items: center;
