--- a/src/components/desktop/NavBar.css
+++ b/src/components/desktop/NavBar.css
@@ -1,24 +1,35 @@
+.toggle {
+  cursor: pointer;
+  font-size: 2vw;
+}
+
 .night-nav-bar {
   background: grey;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 9999;
+  line-height: 10vh;
+  font-size: 1vw;
+  height: 10vh;
+  text-decoration: none;
+  text-align: center;
 }
 
 .night-nav-bar ul {
   background: grey;
-  width: 95%;
+  width: 100vw;
   display: flex;
   height: 5vh;
+  text-decoration: none;
 }
 .night-nav-bar ul li {
-  background: grey;
+  background: darkslategrey;
   display: inline;
   box-sizing: border-box;
   width: 5vw;
-  height: 5vh;
-  padding: 5px 10px;
+  height: 10vh;
+  margin: 0vw 2vw 0vw 2vw;
 }
 .night-nav-bar ul li:last-child {
   background: grey;
@@ -26,28 +37,33 @@
 }
 
 .day-nav-bar {
-  background: snow;
+  background: grey;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 9999;
+  line-height: 10vh;
+  font-size: 1vw;
+  height: 10vh;
+  text-decoration: none;
+  text-align: center;
 }
 
 .day-nav-bar ul {
-  background: snow;
-  width: 95%;
+  background: grey;
+  width: 100vw;
   display: flex;
   height: 5vh;
 }
 .day-nav-bar ul li {
-  background: snow;
+  background: darkslategrey;
   display: inline;
   box-sizing: border-box;
   width: 5vw;
-  height: 5vh;
-  padding: 5px 10px;
+  height: 10vh;
+  margin: 0vw 2vw 0vw 2vw;
 }
 .day-nav-bar ul li:last-child {
-  background: snow;
+  background: grey;
   margin-left: auto;
 }
