--- a/src/components/desktop/Contact.module.css
+++ b/src/components/desktop/Contact.module.css
@@ -9,9 +9,9 @@
 }
 
 .night-contact {
-  background: darkslategrey;
+  background: #3c3f42;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -19,9 +19,9 @@
 }
 
 .day-contact {
-  background: grey;
+  background: #96999c;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
