--- a/src/components/desktop/ProjectBox.module.css
+++ b/src/components/desktop/ProjectBox.module.css
@@ -1,16 +1,17 @@
 .night-project-box {
-  background: darkslateblue;
+  background: #404a5d;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .day-project-box {
-  background: grey;
+  background: #898796;
+
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
