Added some css so it does not look quite as sad

--- a/src/components/desktop/NavBar.module.css
+++ b/src/components/desktop/NavBar.module.css
@@ -35,7 +35,7 @@
 }
 .night-nav-bar a:visited {
   text-decoration: none;
-  color: black;
+  color: red;
 }
 .night-nav-bar a:hover {
   text-decoration: none;
