--- a/src/components/desktop/NavBar.module.css
+++ b/src/components/desktop/NavBar.module.css
@@ -10,10 +10,11 @@
   top: 0;
   z-index: 9999;
   line-height: 10vh;
-  font-size: 2vw;
   height: 10vh;
   width: 100%;
   text-align: center;
+  font-size: 3em;
+  font-family: "Oswald", sans-serif;
 }
 
 .night-nav-bar ul {
@@ -31,23 +32,23 @@
 
 .night-nav-bar a:link {
   text-decoration: none;
-  color: purple;
+  color: #eb2b34;
 }
 .night-nav-bar a:visited {
   text-decoration: none;
-  color: red;
+  color: #eb2b34;
 }
 .night-nav-bar a:hover {
   text-decoration: none;
-  color: yellow;
+  color: #d2c2a9;
 }
 .night-nav-bar a:focus {
   text-decoration: none;
-  color: orange;
+  color: #d2c2a9;
 }
 .night-nav-bar a:active {
   text-decoration: none;
-  color: teal;
+  color: #a2aa97;
 }
 
 .day-nav-bar {
@@ -57,10 +58,11 @@
   top: 0;
   z-index: 9999;
   line-height: 10vh;
-  font-size: 2vw;
   height: 10vh;
   width: 100%;
   text-align: center;
+  font-family: "Oswald", sans-serif;
+  font-size: 3em;
 }
 
 .day-nav-bar ul {
@@ -77,42 +79,30 @@
 
 .day-nav-bar a:link {
   text-decoration: none;
-  color: purple;
+  color: #eb2b34;
 }
 .day-nav-bar a:visited {
   text-decoration: none;
-  color: red;
+  color: #eb2b34;
 }
 .day-nav-bar a:hover {
   text-decoration: none;
-  color: yellow;
+  color: #d2c2a9;
 }
 .day-nav-bar a:focus {
   text-decoration: none;
-  color: orange;
+  color: #d2c2a9;
 }
 .day-nav-bar a:active {
   text-decoration: none;
-  color: teal;
+  color: #a2aa97;
 }
 
-li:link {
+.night-toggle:hover {
   text-decoration: none;
-  color: purple;
+  color: #eee8aa;
 }
-li:visited {
+.day-toggle:hover {
   text-decoration: none;
-  color: red;
-}
-li:hover {
-  text-decoration: none;
-  color: yellow;
-}
-li:focus {
-  text-decoration: none;
-  color: orange;
-}
-li:active {
-  text-decoration: none;
-  color: teal;
+  color: #ffdd42;
 }
