--- a/src/components/desktop/About.module.css
+++ b/src/components/desktop/About.module.css
@@ -1,10 +1,17 @@
 .image {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 10vh;
+  margin: 10vh auto 10vh auto;
   height: 30vh;
   width: 40vh;
+  border: 2px solid #eb2b34;
+  border-radius: 2%;
+}
+
+.about-text {
+  margin: 3vh 9vw 3vh 9vw;
+  height: 10vh;
+  font-size: 2em;
+  text-align: center;
 }
 
 .night-about {
@@ -12,18 +19,8 @@
   height: 100vh;
   width: 100%;
   font-family: "Oswald", sans-serif;
-  padding-top: 50px;
-  margin-top: -50px;
-}
-
-.night-about h1 {
-  margin: 5vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 10vh;
-  font-size: 2em;
-  text-align: center;
+  padding-top: 60px;
+  margin-top: -60px;
 }
 
 .day-about {
@@ -31,16 +28,6 @@
   height: 100vh;
   width: 100%;
   font-family: "Oswald", sans-serif;
-  padding-top: 50px;
-  margin-top: -50px;
-}
-
-.day-about h1 {
-  margin: 5vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 10vh;
-  font-size: 2em;
-  text-align: center;
+  padding-top: 60px;
+  margin-top: -60px;
 }
