--- a/src/components/desktop/Projects.module.css
+++ b/src/components/desktop/Projects.module.css
@@ -10,7 +10,7 @@
 }
 
 .day-project-box {
-  background: #898796;
+  background: rgb(226, 223, 223);
   height: 100vh;
   width: 100%;
   display: flex;
