Not great but looks okay for now. Going to work on some other stuff for a little while

--- a/src/components/desktop/Projects.module.css
+++ b/src/components/desktop/Projects.module.css
@@ -5,8 +5,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 25vh;
-  
 }
 
 .day-project-box {
@@ -16,11 +14,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 25vh;
 }
 
 .carousel {
   height: 40vh;
   width: 40vw;
-  margin-top: -15vh;
+  margin-bottom: 25vh;
 }
