--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,29 @@
 html {
   scroll-behavior: smooth;
-  background: grey;
   user-select: none;
 }
 
 a {
-  color: #eb2b34;
+  color: #ffffff;
 }
 
 a:link {
   text-decoration: none;
-  color: #eb2b34;
+  color: #ffffff;
 }
 a:visited {
   text-decoration: none;
-  color: #eb2b34;
+  color: #ffffff;
 }
 a:hover {
   text-decoration: underline;
-  color: #d2c2a9;
+  color: gainsboro;
 }
 a:focus {
   text-decoration: underline;
-  color: #d2c2a9;
+  color: rgb(116, 116, 116);
 }
 a:active {
   text-decoration: underline;
-  color: #a2aa97;
+  color: rgb(116, 116, 116);
 }
