--- a/src/components/desktop/About.module.css
+++ b/src/components/desktop/About.module.css
@@ -1,33 +1,33 @@
-.image {
-  display: block;
-  margin: 10vh auto 10vh auto;
-  height: 30vh;
-  width: 40vh;
-  border: 2px solid #eb2b34;
-  border-radius: 2%;
+.night-about {
+  background: #062f4f;
+  height: 100vh;
+  width: 100%;
+  font-family: "Oswald", sans-serif;
+  padding-top: 100px;
+  margin-top: -100px;
+  display: flex;
+}
+
+.day-about {
+  background: #416adb;
+  height: 100vh;
+  width: 100%;
+  font-family: "Oswald", sans-serif;
+  padding-top: 100px;
+  margin-top: -100px;
+  display: flex;
 }
 
 .about-text {
-  margin: 3vh 9vw 3vh 9vw;
-  height: 10vh;
+  margin: 25vh 5vw 10vh 5vw;
   font-size: 2em;
-  text-align: center;
+  text-align: justify;
 }
 
-.night-about {
-  background: #3c3f42;
-  height: 100vh;
-  width: 100%;
-  font-family: "Oswald", sans-serif;
-  padding-top: 60px;
-  margin-top: -60px;
-}
-zz
-.day-about {
-  background: #96999c;
-  height: 100vh;
-  width: 100%;
-  font-family: "Oswald", sans-serif;
-  padding-top: 60px;
-  margin-top: -60px;
+.image {
+  margin: 18vh 10vw 10vh 5vw;
+  height: 45vh;
+  width: 60vh;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
 }
