--- a/src/components/desktop/Contact.module.css
+++ b/src/components/desktop/Contact.module.css
@@ -5,7 +5,7 @@
 
 .contact-text {
   font-size: 2em;
-  padding-top: 30vh;
+  padding-top: 35vh;
   margin: 0vh 5vw 0vh 5vw;
   font-family: "Oswald", sans-serif;
 }
@@ -18,14 +18,14 @@
 }
 
 .night-contact {
-  background: #3c3f42;
+  background: #062f4f;
   height: 100vh;
   width: 100%;
   text-align: center;
 }
 
 .day-contact {
-  background: #96999c;
+  background: #416adb;
   height: 100vh;
   width: 100%;
   text-align: center;
