--- a/src/components/mobile/MobileAbout.module.css
+++ b/src/components/mobile/MobileAbout.module.css
@@ -1,10 +1,28 @@
+.night-about {
+  background: #062f4f;
+  height: 100vh;
+  width: 100%;
+  font-family: "Oswald", sans-serif;
+  padding-top: 60px;
+  margin-top: -60px;
+}
+
+.day-about {
+  background: #416adb;
+  height: 100vh;
+  width: 100%;
+  font-family: "Oswald", sans-serif;
+  padding-top: 60px;
+  margin-top: -60px;
+}
+
 .image {
   display: block;
   margin: 10vh auto 5vh auto;
   height: 30vh;
   width: 40vh;
-  border: 2px solid #eb2b34;
-  border-radius: 2%;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
 }
 
 .about-text {
@@ -12,23 +30,4 @@
   font-size: 1.25em;
   height: 100vh;
   text-align: justify;
-}
-
-.night-about {
-  background: #3c3f42;
-  height: 100vh;
-  width: 100%;
-  font-family: "Oswald", sans-serif;
-  padding-top: 60px;
-  margin-top: -60px;
-  
-}
-
-.day-about {
-  background: #96999c;
-  height: 100vh;
-  width: 100%;
-  font-family: "Oswald", sans-serif;
-  padding-top: 60px;
-  margin-top: -60px;
 }
