--- a/src/components/mobile/MobileProjects.module.css
+++ b/src/components/mobile/MobileProjects.module.css
@@ -1,21 +1,20 @@
 .night-project-box {
-  background: #404a5d;
+  background: #0c2340;
   height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
- 
 }
 
 .day-project-box {
-  background: rgb(226, 223, 223);
+  background: #1a4d8b;
   height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
- }
+}
 
 .carousel {
   height: 90vh;
