--- a/src/components/desktop/About.module.css
+++ b/src/components/desktop/About.module.css
@@ -3,9 +3,8 @@
   height: 100vh;
   width: 100%;
   font-family: "Oswald", sans-serif;
-  padding-top: 100px;
-  margin-top: -100px;
-  display: flex;
+  padding-top: 200px;
+  margin-top: -200px;
 }
 
 .day-about {
@@ -13,21 +12,39 @@
   height: 100vh;
   width: 100%;
   font-family: "Oswald", sans-serif;
-  padding-top: 100px;
-  margin-top: -100px;
-  display: flex;
+  padding-top: 200px;
+  margin-top: -200px;
 }
 
 .about-text {
-  margin: 25vh 5vw 10vh 5vw;
-  font-size: 2em;
+  margin: auto;
+  font-size: 2.5em;
   text-align: justify;
+  height: 40vh;
+  width: 50vw;
+  margin: 20vh 0vw 0vh 10vw;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  float: left;
+}
+
+.about-img {
+  height: 40vh;
+  width: 20vw;
+  margin: 18vh 10vw 0vh 0vw;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  float: right;
 }
 
 .image {
-  margin: 18vh 10vw 10vh 5vw;
-  height: 45vh;
-  width: 60vh;
+  margin: auto;
+  height: 30vh;
+  width: 40vh;
   border: 2px solid #ffffff;
   border-radius: 50%;
 }
