--- a/src/components/desktop/Projects.module.css
+++ b/src/components/desktop/Projects.module.css
@@ -1,5 +1,5 @@
 .night-project-box {
-  background: #0C2340;
+  background: #0c2340;
   height: 100vh;
   width: 100%;
   display: flex;
@@ -19,5 +19,11 @@
 .carousel {
   height: 40vh;
   width: 40vw;
-  margin-bottom: 25vh;
+  margin-bottom: 20vh;
+}
+.img-div {
+  cursor: pointer;
+  border: 2px solid #ffffff;
+  cursor: pointer;
+
 }
