--- a/src/components/desktop/NavBar.module.css
+++ b/src/components/desktop/NavBar.module.css
@@ -49,7 +49,6 @@
 .day-nav-bar ul {
   display: flex;
   margin: 0;
- 
 }
 
 .day-nav-bar ul li {
@@ -88,4 +87,10 @@
   text-decoration: none;
   color: #d2c2a9;
   transform: scale(1.1);
+}
+
+/* Don't judge my use of !important....*/
+
+.selected {
+  text-decoration: underline !important;
 }
