Centered mobile menu

--- a/src/components/mobile/MobileNavBar.module.css
+++ b/src/components/mobile/MobileNavBar.module.css
@@ -33,7 +33,7 @@
   position: fixed;
   z-index: 9999;
   top: 0;
-  left: 0;
+  left: 5vw;
   right: 0;
   bottom: 0;
   height: 0;
@@ -54,7 +54,7 @@
   position: fixed;
   z-index: 9999;
   top: 0;
-  left: 0;
+  left: 5vw;
   right: 0;
   bottom: 0;
   height: 0;
