--- a/src/components/desktop/About.module.css
+++ b/src/components/desktop/About.module.css
@@ -8,7 +8,7 @@
 }
 
 .day-about {
-  background: #416adb;
+  background: #fbfcff;
   height: 100vh;
   width: 100%;
   font-family: "Oswald", sans-serif;
@@ -41,7 +41,7 @@
   float: right;
 }
 
-.image {
+.night-image {
   margin: auto;
   height: 30vh;
   width: 40vh;
@@ -49,12 +49,32 @@
   border-radius: 50%;
 }
 
-.image:hover {
+.night-image:hover {
+  cursor: pointer;
+  border: 2px solid #696969;
+}
+
+.night-image:focus {
+  cursor: pointer;
+  border: 2px solid #696969;
+}
+
+.day-image {
+  margin: auto;
+  height: 30vh;
+  width: 40vh;
+  border: 3px solid #dc143c;
+  border-radius: 50%;
+}
+
+.day-image:hover {
+  cursor: pointer;
+  border: 2px solid #ffcadb;
+}
+
+.day-image:focus {
   cursor: pointer;
   border: 2px solid gainsboro;
 }
 
-.image:focus {
-  cursor: pointer;
-  border: 2px solid gainsboro;
-}
+
