--- a/src/components/desktop/Contact.module.css
+++ b/src/components/desktop/Contact.module.css
@@ -1,17 +1,17 @@
 .email-button {
   user-select: default;
   cursor: pointer;
-  color: #ffffff;
+  color: #dc143c;
 }
 
 .email-button:hover {
   text-decoration: underline;
-  color: gainsboro;
+  color: #ffffff;
 }
 
 .email-button:active {
   text-decoration: underline;
-  color: rgb(116, 116, 116);
+  color: gainsboro;
 }
 
 .contact-text {
@@ -36,7 +36,7 @@
 }
 
 .day-contact {
-  background: #416adb;
+  background: #fbfcff;
   height: 100vh;
   width: 100%;
   text-align: center;
