--- a/src/components/desktop/NavBar.module.css
+++ b/src/components/desktop/NavBar.module.css
@@ -43,7 +43,7 @@
   text-align: center;
   font-size: 3em;
   font-family: "Oswald", sans-serif;
-  border-bottom: 2px solid #ffffff;
+  border-bottom: 3px solid #ff004f;
 }
 
 .day-nav-bar ul {
