--- a/src/components/mobile/MobileAbout.module.css
+++ b/src/components/mobile/MobileAbout.module.css
@@ -8,7 +8,7 @@
 }
 
 .day-about {
-  background: #416adb;
+  background: #fbfcff;
   height: 100vh;
   width: 100%;
   font-family: "Oswald", sans-serif;
